flex/flex-tests/testData/flexUnit/highlighting/SuiteWithNoRunner3.as
package {

[Suite]
[RunWith(<error descr="Qualified class name expected">""</error>)]
public class SuiteWithNoRunner3 {

    public var test : MyTest;

}
}